# BinDecHexAscii

./: Makefile  Makefile.am  Makefile.in  README.md  bindechexascii.c  configure  configure.ac  conv.c
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: manpage-src.txt
docs/: bindechexascii.1
man/: Makefile.am  Makefile.in  bindechexascii.1
src/: Makefile.am  Makefile.in  applet.c  applet.h  converter.c  converter.h  libstuff.c  libstuff.h  main.c  num_check.c  num_check.h
