SUBDIRS = man src
install-exec-hook:
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/ibase$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/ascii2bin$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/ascii2oct$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/ascii2dec$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/ascii2hex$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/bin2ascii$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/bin2oct$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/bin2dec$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/bin2hex$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/oct2ascii$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/oct2bin$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/oct2dec$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/oct2hex$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/dec2ascii$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/dec2bin$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/dec2oct$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/dec2hex$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/hex2ascii$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/hex2bin$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/hex2oct$(EXEEXT)
	ln -s $(DESTDIR)$(bindir)/bindechexascii$(EXEEXT) $(DESTDIR)$(bindir)/hex2dec$(EXEEXT)

